--- a/src/components/MovieReviews/MovieReviews.module.css
+++ b/src/components/MovieReviews/MovieReviews.module.css
@@ -6,11 +6,11 @@
 .userInfo {
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 12px;
 }
 .avatar {
-  width: 48px;
-  height: 48px;
+  width: 44px;
+  height: 44px;
   border-radius: 50%;
   flex-shrink: 0;
 }
@@ -18,11 +18,19 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 12px;
+  margin-bottom: 16px;
+}
+.username {
+  font-weight: 600;
+  color: var(--smoke);
+}
+.commentContainer {
+  padding: 0 12px;
 }
 .comment {
   margin-bottom: 10px;
 }
 .date {
+  font-weight: 400;
   color: var(--smoke);
 }
