--- a/src/components/MovieReviews/MovieReviews.module.css
+++ b/src/components/MovieReviews/MovieReviews.module.css
@@ -1,36 +1,48 @@
-.list {
-  display: flex;
-  flex-direction: column;
-  gap: 48px;
+.listItem:not(:last-child) {
+  margin-bottom: 40px;
 }
 .userInfo {
+  margin-bottom: 16px;
+}
+.user {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 8px;
 }
+
 .avatar {
-  width: 44px;
-  height: 44px;
+  width: 32px;
+  height: 32px;
   border-radius: 50%;
   flex-shrink: 0;
 }
-.userInfoContainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 16px;
-}
 .username {
   font-weight: 600;
-  color: var(--smoke);
+  font-size: 16px;
 }
 .commentContainer {
-  padding: 0 12px;
+  padding-left: 12px;
 }
 .comment {
-  margin-bottom: 10px;
+  margin-bottom: 8px;
 }
 .date {
-  font-weight: 400;
+  font-size: 14px;
   color: var(--smoke);
+  display: flex;
+  justify-content: flex-end;
+}
+
+@media (max-width: 767px) {
+  .user {
+    margin-bottom: 8px;
+  }
+}
+
+@media (min-width: 768px) {
+  .userInfo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
