--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,5 +1,5 @@
 .form {
-  width: 50%;
+  width: 100%;
   margin-bottom: 48px;
 }
 .label {
@@ -12,7 +12,7 @@
   border-radius: 30px;
   padding: 10px 16px 10px 50px;
   color: var(--white);
-  font-size: 18px;
+  font-size: 16px;
   transition: border-color var(--duration) var(--transition-function);
 }
 .searchIcon {
@@ -25,4 +25,10 @@
 }
 .searchInput:focus {
   border-color: var(--red);
+}
+
+@media (min-width: 768px) {
+  .form {
+    width: 50%;
+  }
 }
