--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,9 @@
 
 :root {
   font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
   line-height: 1.5;
-  font-weight: 500;
+  font-weight: 400;
 
   color: #ffffff;
   background-color: #181818;
