--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,3 +1,10 @@
 .title {
-  margin-bottom: 48px;
+  font-size: 24px;
+  margin-bottom: 40px;
+}
+
+@media (min-width: 768px) {
+  .title {
+    font-size: 32px;
+  }
 }
